--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
   },
   "dependencies": {
     "@types/express": "^4.17.13",
+    "@types/socket.io": "^3.0.2",
+    "add": "^2.0.6",
     "concurrently": "^7.0.0",
     "express": "^4.17.2",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "socket.io": "^4.4.1"
   }
 }
